--- a/output/kitchen/kitchen_rotation.html
+++ b/output/kitchen/kitchen_rotation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Tarefas de Refeição</title>
+    <title>🍽️ Cozinha</title>
     <style>
         body {
             font-family: 'Helvetica', 'Arial', sans-serif;
@@ -58,7 +58,7 @@
             font-weight: bold; 
         }
         .task-limpar { 
-            color: #750a8c; 
+            color: #008080; 
             font-weight: bold; 
         }
         .schedule {
@@ -92,7 +92,7 @@
             font-weight: bold;
             padding: 6px 4px;
             text-align: center;
-            width: 100px;
+            width: 120px;
         }
         .schedule td {
             border: 1px solid #eee;
@@ -144,7 +144,7 @@
     </style>
 </head>
 <body>
-    <h1>🍽️ TAREFAS DE REFEIÇÃO 🍽️</h1>
+    <h1>🔀 {category_title.upper()} 🔀</h1>
     <table class="legend">
         <tr>
             <th>Tarefa</th>
@@ -153,208 +153,137 @@
 
         <tr>
             <td><span class="task-lavar task-title"><span class="task-emoji">🍽️</span>Lavar</span></td>
-            <td>Lavar a loiça</td>
+            <td>Lavar a loiça durante toda a semana</td>
         </tr>
         <tr>
             <td><span class="task-arrumar task-title"><span class="task-emoji">🧺</span>Arrumar</span></td>
-            <td>Arrumar a loiça + Pôr a mesa</td>
+            <td>Arrumar a loiça + Pôr a mesa durante toda a semana</td>
         </tr>
         <tr>
             <td><span class="task-limpar task-title"><span class="task-emoji">🧹</span>Limpar</span></td>
-            <td>Limpar a cozinha (mesa, banca, fogão, migalhas, etc)</td>
+            <td>Limpar a cozinha e a caixa dos gatos durante toda a semana</td>
         </tr>
     </table>
     <table class="schedule">
         <tr>
-            <th>Data</th>
+            <th>Semana</th>
             <th><span class="task-header">🍽️ Lavar</span></th>
             <th><span class="task-header">🧺 Arrumar</span></th>
             <th><span class="task-header">🧹 Limpar</span></th>
         </tr>
         <tr>
-            <td class="day-col">05 Mai (Dom)</td>
-            <td>A 👦 ⟷ D 🧓</td>
-            <td>C 👧 ⟷ H 🧔</td>
-            <td>M 👩 ⟷ P 👱‍♀️</td>
-        </tr>
-        <tr>
-            <td class="day-col">06 Mai (Seg)</td>
-            <td>P 👱‍♀️ ⟷ H 🧔</td>
-            <td>A 👦 ⟷ M 👩</td>
-            <td>C 👧 ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">07 Mai (Ter)</td>
-            <td>A 👦 ⟷ M 👩</td>
-            <td>C 👧 ⟷ D 🧓</td>
-            <td>P 👱‍♀️ ⟷ H 🧔</td>
-        </tr>
-        <tr>
-            <td class="day-col">08 Mai (Qua)</td>
-            <td>D 🧓 ⟷ H 🧔</td>
-            <td>A 👦 ⟷ P 👱‍♀️</td>
-            <td>C 👧 ⟷ M 👩</td>
-        </tr>
-        <tr>
-            <td class="day-col">09 Mai (Qui)</td>
-            <td>A 👦 ⟷ C 👧</td>
-            <td>M 👩 ⟷ D 🧓</td>
-            <td>P 👱‍♀️ ⟷ H 🧔</td>
-        </tr>
-        <tr>
-            <td class="day-col">10 Mai (Sex)</td>
-            <td>M 👩 ⟷ H 🧔</td>
+            <td class="day-col">20 a 26 Mai</td>
             <td>C 👧 ⟷ P 👱‍♀️</td>
-            <td>A 👦 ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">11 Mai (Sáb)</td>
-            <td>A 👦 ⟷ P 👱‍♀️</td>
             <td>D 🧓 ⟷ H 🧔</td>
-            <td>C 👧 ⟷ M 👩</td>
+            <td>A 👦 ⟷ M 👩</td>
         </tr>
         <tr>
-            <td class="day-col">12 Mai (Dom)</td>
+            <td class="day-col">27 Mai a 02 Jun</td>
             <td>M 👩 ⟷ H 🧔</td>
             <td>A 👦 ⟷ C 👧</td>
             <td>P 👱‍♀️ ⟷ D 🧓</td>
         </tr>
         <tr>
-            <td class="day-col">13 Mai (Seg)</td>
-            <td>P 👱‍♀️ ⟷ D 🧓</td>
+            <td class="day-col">03 a 09 Jun</td>
+            <td>A 👦 ⟷ D 🧓</td>
+            <td>M 👩 ⟷ P 👱‍♀️</td>
+            <td>C 👧 ⟷ H 🧔</td>
+        </tr>
+        <tr>
+            <td class="day-col">10 a 16 Jun</td>
+            <td>A 👦 ⟷ P 👱‍♀️</td>
+            <td>C 👧 ⟷ D 🧓</td>
             <td>M 👩 ⟷ H 🧔</td>
+        </tr>
+        <tr>
+            <td class="day-col">17 a 23 Jun</td>
+            <td>D 🧓 ⟷ H 🧔</td>
+            <td>A 👦 ⟷ M 👩</td>
+            <td>C 👧 ⟷ P 👱‍♀️</td>
+        </tr>
+        <tr>
+            <td class="day-col">24 a 30 Jun</td>
+            <td>C 👧 ⟷ M 👩</td>
+            <td>P 👱‍♀️ ⟷ H 🧔</td>
+            <td>A 👦 ⟷ D 🧓</td>
+        </tr>
+        <tr>
+            <td class="day-col">01 a 07 Jul</td>
+            <td>C 👧 ⟷ D 🧓</td>
+            <td>A 👦 ⟷ M 👩</td>
+            <td>P 👱‍♀️ ⟷ H 🧔</td>
+        </tr>
+        <tr>
+            <td class="day-col">08 a 14 Jul</td>
+            <td>A 👦 ⟷ H 🧔</td>
+            <td>C 👧 ⟷ P 👱‍♀️</td>
+            <td>M 👩 ⟷ D 🧓</td>
+        </tr>
+        <tr>
+            <td class="day-col">15 a 21 Jul</td>
+            <td>M 👩 ⟷ P 👱‍♀️</td>
+            <td>D 🧓 ⟷ H 🧔</td>
             <td>A 👦 ⟷ C 👧</td>
         </tr>
         <tr class="page-break">
-            <td class="day-col">14 Mai (Ter)</td>
+            <td class="day-col">22 a 28 Jul</td>
             <td>C 👧 ⟷ H 🧔</td>
-            <td>A 👦 ⟷ D 🧓</td>
             <td>M 👩 ⟷ P 👱‍♀️</td>
+            <td>A 👦 ⟷ D 🧓</td>
         </tr>
         <tr>
-            <td class="day-col">15 Mai (Qua)</td>
-            <td>A 👦 ⟷ D 🧓</td>
-            <td>M 👩 ⟷ P 👱‍♀️</td>
-            <td>C 👧 ⟷ H 🧔</td>
-        </tr>
-        <tr>
-            <td class="day-col">16 Mai (Qui)</td>
-            <td>P 👱‍♀️ ⟷ H 🧔</td>
-            <td>A 👦 ⟷ C 👧</td>
+            <td class="day-col">29 Jul a 04 Ago</td>
             <td>M 👩 ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">17 Mai (Sex)</td>
-            <td>C 👧 ⟷ M 👩</td>
-            <td>P 👱‍♀️ ⟷ D 🧓</td>
             <td>A 👦 ⟷ H 🧔</td>
+            <td>C 👧 ⟷ P 👱‍♀️</td>
         </tr>
         <tr>
-            <td class="day-col">18 Mai (Sáb)</td>
-            <td>A 👦 ⟷ H 🧔</td>
-            <td>C 👧 ⟷ M 👩</td>
-            <td>P 👱‍♀️ ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">19 Mai (Dom)</td>
-            <td>C 👧 ⟷ D 🧓</td>
+            <td class="day-col">05 a 11 Ago</td>
             <td>A 👦 ⟷ P 👱‍♀️</td>
+            <td>C 👧 ⟷ D 🧓</td>
             <td>M 👩 ⟷ H 🧔</td>
         </tr>
         <tr>
-            <td class="day-col">20 Mai (Seg)</td>
-            <td>A 👦 ⟷ H 🧔</td>
-            <td>C 👧 ⟷ M 👩</td>
-            <td>P 👱‍♀️ ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">21 Mai (Ter)</td>
-            <td>C 👧 ⟷ P 👱‍♀️</td>
-            <td>D 🧓 ⟷ H 🧔</td>
-            <td>A 👦 ⟷ M 👩</td>
-        </tr>
-        <tr>
-            <td class="day-col">22 Mai (Qua)</td>
-            <td>A 👦 ⟷ H 🧔</td>
-            <td>M 👩 ⟷ P 👱‍♀️</td>
-            <td>C 👧 ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">23 Mai (Qui)</td>
-            <td>M 👩 ⟷ D 🧓</td>
+            <td class="day-col">12 a 18 Ago</td>
             <td>C 👧 ⟷ H 🧔</td>
-            <td>A 👦 ⟷ P 👱‍♀️</td>
-        </tr>
-        <tr class="page-break">
-            <td class="day-col">24 Mai (Sex)</td>
-            <td>A 👦 ⟷ C 👧</td>
             <td>P 👱‍♀️ ⟷ D 🧓</td>
-            <td>M 👩 ⟷ H 🧔</td>
-        </tr>
-        <tr>
-            <td class="day-col">25 Mai (Sáb)</td>
-            <td>M 👩 ⟷ P 👱‍♀️</td>
-            <td>A 👦 ⟷ H 🧔</td>
-            <td>C 👧 ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">26 Mai (Dom)</td>
-            <td>C 👧 ⟷ D 🧓</td>
-            <td>M 👩 ⟷ P 👱‍♀️</td>
-            <td>A 👦 ⟷ H 🧔</td>
-        </tr>
-        <tr>
-            <td class="day-col">27 Mai (Seg)</td>
-            <td>A 👦 ⟷ M 👩</td>
-            <td>D 🧓 ⟷ H 🧔</td>
-            <td>C 👧 ⟷ P 👱‍♀️</td>
-        </tr>
-        <tr>
-            <td class="day-col">28 Mai (Ter)</td>
-            <td>P 👱‍♀️ ⟷ H 🧔</td>
-            <td>C 👧 ⟷ M 👩</td>
-            <td>A 👦 ⟷ D 🧓</td>
-        </tr>
-        <tr>
-            <td class="day-col">29 Mai (Qua)</td>
-            <td>M 👩 ⟷ D 🧓</td>
-            <td>A 👦 ⟷ P 👱‍♀️</td>
-            <td>C 👧 ⟷ H 🧔</td>
-        </tr>
-        <tr>
-            <td class="day-col">30 Mai (Qui)</td>
-            <td>C 👧 ⟷ P 👱‍♀️</td>
-            <td>D 🧓 ⟷ H 🧔</td>
             <td>A 👦 ⟷ M 👩</td>
         </tr>
         <tr>
-            <td class="day-col">31 Mai (Sex)</td>
+            <td class="day-col">19 a 25 Ago</td>
             <td>M 👩 ⟷ D 🧓</td>
             <td>A 👦 ⟷ C 👧</td>
             <td>P 👱‍♀️ ⟷ H 🧔</td>
         </tr>
         <tr>
-            <td class="day-col">01 Jun (Sáb)</td>
-            <td>C 👧 ⟷ P 👱‍♀️</td>
+            <td class="day-col">26 Ago a 01 Set</td>
+            <td>A 👦 ⟷ P 👱‍♀️</td>
             <td>M 👩 ⟷ H 🧔</td>
-            <td>A 👦 ⟷ D 🧓</td>
+            <td>C 👧 ⟷ D 🧓</td>
         </tr>
         <tr>
-            <td class="day-col">02 Jun (Dom)</td>
+            <td class="day-col">02 a 08 Set</td>
+            <td>C 👧 ⟷ H 🧔</td>
             <td>M 👩 ⟷ D 🧓</td>
             <td>A 👦 ⟷ P 👱‍♀️</td>
-            <td>C 👧 ⟷ H 🧔</td>
         </tr>
-        <tr class="page-break">
-            <td class="day-col">03 Jun (Seg)</td>
-            <td>C 👧 ⟷ P 👱‍♀️</td>
+        <tr>
+            <td class="day-col">09 a 15 Set</td>
+            <td>A 👦 ⟷ D 🧓</td>
+            <td>P 👱‍♀️ ⟷ H 🧔</td>
+            <td>C 👧 ⟷ M 👩</td>
+        </tr>
+        <tr>
+            <td class="day-col">16 a 22 Set</td>
+            <td>M 👩 ⟷ P 👱‍♀️</td>
+            <td>A 👦 ⟷ C 👧</td>
             <td>D 🧓 ⟷ H 🧔</td>
-            <td>A 👦 ⟷ M 👩</td>
         </tr>
     </table>
     
     <div class="footer">
-        Feito por Afonso ❤️
+        <p>Feito por Afonso ❤️</p>
+        <p><em>Cada linha representa uma semana completa (segunda a domingo).</em></p>
     </div>
 </body>
 </html>
